:sparkles: :construction_worker: User create use case and more
